--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="navbar-content-effect">
         <div class="navbar-center">
           <div class="navbar-hamburguer">
-            <a class="navbar-hamburguer__logo">Malbonm</a>
+            <a class="navbar-hamburguer__logo"><span>Mal</span>bonm</a>
           </div>
           <div class="buttonHome-box">
             <a href="#">
@@ -41,17 +41,40 @@
       </div>
       <ul class="side-bar__menu">
         <li class="side-bar__item"><a class="side-bar__link">EXPERIENCE</a></li>
-        <li class="side-bar__item"><a class="side-bar__link">EDUCATION</a></li>
-        <li class="side-bar__item"><a class="side-bar__link">INTERESTS</a></li>
-        <li class="side-bar__item sider-bar__submenu"><a class="side-bar__link sider-bar__submenuButton">LANGUAGES</a>
-            <ul class="sider-bar_submenu-list">
-              <li><a>Spanish (Nativo)</a></li>
-              <li><a>English</a></li>
-              <li><a>French</a></li>
-            </ul>
+        <li class="side-bar__item"><a class="side-bar__link education-button">EDUCATION</a></li>
+        <li class="side-bar__item sider-bar__submenu2"><a class="side-bar__link sider-bar__submenuButton2">INTERESTS</a>
+          <ul class="sider-bar_submenu-list2">
+            <li><a>Cooking</a></li>
+            <li><a>Videogames</a></li>
+            <li><a>Sports</a></li>
+            <li><a>Reading</a></li>
+            <li><a>Coffe</a></li>
+            <li><a>Game of Thrones</a></li>
+          </ul>
         </li>
-        <li class="side-bar__item"><a class="side-bar__link">SOCIAL MEDIA</a></li>
+        <li class="side-bar__item sider-bar__submenu"><a class="side-bar__link sider-bar__submenuButton">LANGUAGES</a>
+          <ul class="sider-bar_submenu-list">
+            <li><a>Spanish (Nativo)</a></li>
+            <li><a>English</a></li>
+            <li><a>French</a></li>
+          </ul>
+        </li>
+        <li class="side-bar__item"><a href="#contact" class="side-bar__link" style="color: black;">SOCIAL MEDIA</a></li>
       </ul>
+      <div class="education-box">
+        <div class="education-box__item">
+          <img src="img/vigil.png" alt="">
+        </div>
+        <div class="education-box__item">
+          <img src="img/platzi.png" alt="">
+        </div>
+        <div class="education-box__item">
+          <img src="img/freecodecamp.png" alt="">
+        </div>
+        <div class="education-box__item">
+          <a><i class="fab fa-youtube"></i></a>
+        </div>
+      </div>
     </div>
 
     <!-- ################### END SIDE-BAR ################### -->
@@ -64,7 +87,7 @@
               <div class="banner-content">
                 <div class="banner-effect">
                   <h1 class="banner-content__title">MIGUEL <span>ALONSO</span></h1>
-                  <h4><a href="" class="banner-content__email" >malbonm07@gmail.com</a></h4>
+                  <h4><a href="mailto:malbonm07@gmail.com" class="banner-content__email" >malbonm07@gmail.com</a></h4>
                   <div class="social-content">
                     <ul class="banner-content-list">
                       <li><a href="https://www.facebook.com/malbonm07" target="_blank" class="banner-content-list__link"><i class="fab fa-facebook-f"></i></a></li>
@@ -216,6 +239,9 @@
                 <a href="#" class="footer-description-box__button">Submit</a>
               </div>
               <h5>MIGUEL ALONSO</h5>
+              <div class="footer-home-button">
+                <a href="#"><i class="fas fa-angle-up"></i></a>
+              </div>
               <p>&#169; Copyright <time>2018-2019</time></p>
               <p>All rights reserved. Powered by Malbom studio</p>
             </div>
