--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
       </div>
       <ul class="side-bar__menu">
         <li class="side-bar__item"><a class="side-bar__link">EXPERIENCE</a></li>
-        <li class="side-bar__item"><a class="side-bar__link education-button">EDUCATION</a></li>
+        <li class="side-bar__item sider-bar__submenu3"><a class="side-bar__link education-button sider-bar__submenuButton3">EDUCATION</a>
+          <ul class="sider-bar_submenu-list3">
+            <li><span><i class="fas fa-university"></i></span><a>Instituto Vigil</a></li>
+            <li><span><i class="fas fa-laptop-code"></i></span><a>Platzi</a></li>
+            <li><span><i class="fab fa-free-code-camp"></i></span><a>Freecodecamp</a></li>
+            <li><span><i class="fab fa-youtube"></i></span><a>Youtube Tutorials</a></li>
+          </ul>
+        </li>
         <li class="side-bar__item sider-bar__submenu2"><a class="side-bar__link sider-bar__submenuButton2">INTERESTS</a>
           <ul class="sider-bar_submenu-list2">
             <li><a>Cooking</a></li>
@@ -61,7 +68,7 @@
         </li>
         <li class="side-bar__item"><a href="#contact" class="side-bar__link" style="color: black;">SOCIAL MEDIA</a></li>
       </ul>
-      <div class="education-box">
+      <!-- <div class="education-box">
         <div class="education-box__item">
           <img src="img/vigil.png" alt="">
         </div>
@@ -74,7 +81,7 @@
         <div class="education-box__item">
           <a><i class="fab fa-youtube"></i></a>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <!-- ################### END SIDE-BAR ################### -->
@@ -149,7 +156,8 @@
                   <a href="https://codesandbox.io/embed/7k81vw6pq0?fontsize=14" target="_blank">
                     <img src="img/vue-music-app.png" alt="" class="project-img">
                   <div class="project-img-overlay">Vue-Music App</div>
-                  <div class="img-bang"><h6><tim>March - 2019</tim></h6></div>
+                  <div class="img-bang"><h6><time>March - 2019</time></h6></div>
+                  <div class="img-bang img-see"><h6><i class="fas fa-eye"></i>see</h6></div>
                   </a>
                 </div>
                 <div class="project-description-overlay">
