--- a/index.html
+++ b/index.html
@@ -68,20 +68,6 @@
         </li>
         <li class="side-bar__item"><a href="#contact" class="side-bar__link" style="color: black;">SOCIAL MEDIA</a></li>
       </ul>
-      <!-- <div class="education-box">
-        <div class="education-box__item">
-          <img src="img/vigil.png" alt="">
-        </div>
-        <div class="education-box__item">
-          <img src="img/platzi.png" alt="">
-        </div>
-        <div class="education-box__item">
-          <img src="img/freecodecamp.png" alt="">
-        </div>
-        <div class="education-box__item">
-          <a><i class="fab fa-youtube"></i></a>
-        </div>
-      </div> -->
     </div>
 
     <!-- ################### END SIDE-BAR ################### -->
@@ -126,7 +112,7 @@
                 <li><span><i class="fab fa-vuejs"><span class="skill-item__popover">Vue</span></i></span></li>
                 <li><span><i class="fab fa-bootstrap"><span class="skill-item__popover">Bootstrap</span></i></span></li>
                 <li><span><i class="fab fa-sass"><span class="skill-item__popover">Sass</span></i></span></li>
-                <li><span><i class="fas fa-th"><span class="skill-item__popover">Grid</span></i></span></li>
+                <li><span><i class="fas fa-th"><span class="skill-item__popover">Grid/Frexbox</span></i></span></li>
                 <li><span><i class="fab fa-npm"><span class="skill-item__popover">Npm</span></i></span></li>
                 <li><span><i class="fab fa-github"><span class="skill-item__popover">Github</span></i></span></li>
               </ul>
@@ -157,7 +143,7 @@
                     <img src="img/vue-music-app.png" alt="" class="project-img">
                   <div class="project-img-overlay">Vue-Music App</div>
                   <div class="img-bang"><h6><time>March - 2019</time></h6></div>
-                  <div class="img-bang img-see"><h6><i class="fas fa-eye"></i>see</h6></div>
+                  <div class="img-see"><h6><i class="fas fa-eye"></i>&ensp;see</h6></div>
                   </a>
                 </div>
                 <div class="project-description-overlay">
@@ -169,6 +155,7 @@
                     <li>Javascript linting: Eslint</li>
                     <li>Axios library, request ajax.</li>
                     <li>Event-bus (plugin)</li>
+                    <li>Vue i18n internationalization</li>
                   </ul>
                 </div>
               </article>
@@ -183,7 +170,8 @@
                   <a href="https://codesandbox.io/embed/4051wopon9?fontsize=14" target="_blank">
                     <img src="img/todo-list-vue.png" alt="" class="project-img">
                     <div class="project-img-overlay">Todo List</div>
-                    <div class="img-bang"><h6><tim>January - 2019</tim></h6></div>
+                    <div class="img-bang"><h6><time>January - 2019</time></h6></div>
+                    <div class="img-see"><h6><i class="fas fa-eye"></i>&ensp;see</h6></div>
                   </a>
                 </div>
                 <h4>Skills :</h4>
@@ -206,7 +194,8 @@
                   <a href="https://malbonm07.github.io/landing-page/" target="_blank">
                     <img src="img/landing-page.png" alt="" class="project-img">
                     <div class="project-img-overlay">Freecodecamp Landing Page</div>
-                    <div class="img-bang"><h6><tim>December - 2018</tim></h6></div>
+                    <div class="img-bang"><h6><time>December - 2018</time></h6></div>
+                    <div class="img-see"><h6><i class="fas fa-eye"></i>&ensp;see</h6></div>
                   </a>
                 </div>
                 <h4>Skills :</h4>
