added about page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </a>
           </div>
           <ul class="navbar-list">
-            <li><a href="" class="navbar-list__link">About me</a></li>
+            <li><a href="pages/about.html" class="navbar-list__link">About me</a></li>
             <li><a href="#contact" class="navbar-list__link">Contact</a></li>
             <li><a href="#projects" class="navbar-list__link">Projects</a></li>
           </ul>
@@ -43,7 +43,7 @@
         <li class="side-bar__item"><a class="side-bar__link">EXPERIENCE</a></li>
         <li class="side-bar__item sider-bar__submenu3"><a class="side-bar__link education-button sider-bar__submenuButton3">EDUCATION</a>
           <ul class="sider-bar_submenu-list3">
-            <li><span><i class="fas fa-university"></i></span><a>Instituto Vigil</a></li>
+            <li><span><i class="fas fa-university"></i></span><a>Inst. Tecnológico Vigil</a></li>
             <li><span><i class="fas fa-laptop-code"></i></span><a>Platzi</a></li>
             <li><span><i class="fab fa-free-code-camp"></i></span><a>Freecodecamp</a></li>
             <li><span><i class="fab fa-youtube"></i></span><a>Youtube Tutorials</a></li>
