--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </a>
           </div>
           <ul class="navbar-list">
-            <li><a href="pages/about.html" class="navbar-list__link">About me</a></li>
+            <li><a href="#about" class="navbar-list__link">About me</a></li>
             <li><a href="#contact" class="navbar-list__link">Contact</a></li>
             <li><a href="#projects" class="navbar-list__link">Projects</a></li>
           </ul>
@@ -97,6 +97,20 @@
 
           <!-- ################### END HERO ################### -->
 
+          <!-- ################### ABOUT ################### -->
+
+          <section id="about" class="about-section">
+            <div class="about-overlay">
+              <div class="about-center">
+                  <h2 class="about-me">ABOUT <span>ME</span></h2>
+                  <p class="about-description">Aspirant Front-end developer using Technologies such as HTML5, CSS3, JavaScript, VueJs and more.
+During my 5 years as an employee in business administration, I gained the desire to learn more and not stop there. I decided to study two different languages, English and French, after that I took the time to learn programming and web development and decided that this is the type of work I want, always improving, sometimes with mistakes, and constantly learning. Outside of formal education, I love self-learning because I think it's the way to keep up with the constantly changing technology. I like to learn something new every day about web technologies and programming through MOOCs (Massive Open Online Courses ).</p>
+              </div>
+            </div>
+          </section>
+
+          <!-- ################### END ABOUT ################### -->
+
           <!-- ################### SKILLS ################### -->
 
           <section class="skills-section">
@@ -121,7 +135,7 @@
             <ul class="workflow-list">
               <li>Mobile-First, Responsive Design Focus</li>
               <li>Cross Functional Teams (Creative to Development)</li>
-              <li id="projects">Agile Development Approach</li>
+              <li >Agile Development Approach</li>
             </ul>
           </section>
 
@@ -129,7 +143,7 @@
 
           <!-- ################### PORTFOLIO ################### -->
 
-          <section  class="projects">
+          <section id="projects" class="projects">
             <div class="projects-title">
               <h2>PROJECTS</h2>
             </div>
