--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ul class="navbar-list">
             <li><a href="#about" class="navbar-list__link">About me</a></li>
             <li><a href="#contact" class="navbar-list__link">Contact</a></li>
-            <li><a href="#projects" class="navbar-list__link">Projects</a></li>
+            <li><a href="#projects" class="navbar-list__link">Portfolio</a></li>
           </ul>
         </div>
       </div>
@@ -44,8 +44,10 @@
         <li class="side-bar__item sider-bar__submenu3"><a class="side-bar__link education-button sider-bar__submenuButton3">EDUCATION</a>
           <ul class="sider-bar_submenu-list3">
             <li><span><i class="fas fa-university"></i></span><a>Inst. Tecnológico Vigil</a></li>
+            <li><span></span><a class="submenu-title" style="padding: 10px 0 10px 22px;">Online Courses:</a></li>
             <li><span><i class="fas fa-laptop-code"></i></span><a>Platzi</a></li>
             <li><span><i class="fab fa-free-code-camp"></i></span><a>Freecodecamp</a></li>
+            <li><span><i class="fas fa-laptop"></i></span><a>MOOC</a></li>
             <li><span><i class="fab fa-youtube"></i></span><a>Youtube Tutorials</a></li>
           </ul>
         </li>
@@ -145,7 +147,7 @@ During my 5 years as an employee in business administration, I gained the desire
 
           <section id="projects" class="projects">
             <div class="projects-title">
-              <h2>PROJECTS</h2>
+              <h2>PORTFOLIO</h2>
             </div>
             <div class="projects-center">
 
